--- a/dvc.yaml
+++ b/dvc.yaml
@@ -32,3 +32,8 @@ stages:
     - src/models/predict_model.py
     outs:
     - reports/metrics.json
+metrics:
+- dvclive/metrics.json
+plots:
+- dvclive/plots/metrics:
+    x: step
